# analyticalPG

./: AUTHORS  CMakeLists.txt  README  oneStepStudy.pc.cmake
doc/: CMakeLists.txt  footer.html  header.html  package.dox.cmake
doc/pictures/: footer.txt
include/analyticalPG/: newPGstepStudy.h  oneStepStudy.h
include/oneStepStudy/: filesManipulation.h  newPGstepStudy.h
src/: CMakeLists.txt  InverseKinematics.cpp  InverseKinematics.h  filesManipulation.cpp  newPGstepStudy.cpp  oneStepStudy.cpp  oneStepStudy2.cpp
unitTesting/: CMakeLists.txt  oneStepTest.cpp  oneStepTest2.cpp
